add bd master_tenant.sql and tenant01.sql for exemple

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,9 @@
 <body>
 <div style="height: 50px;padding: 5px 0 5px 100px;background-color: #fff;border-bottom: 1px solid #ddd;">
     <a href="#" style="display: block;"><img src="https://cdn.ramostear.com/una.logo.png" style="width:140px;"></a>
+    <div class="row">
+        <h1>TEST</h1>
+    </div>
 </div>
 
 </body>
